// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseSelect /> renders compact 1`] = `
<div
  className="select-0-2-1"
>
  <FormInput
    compact={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="arrow-0-2-2 arrow_compact-0-2-5"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;

exports[`<BaseSelect /> renders disabled 1`] = `
<div
  className="select-0-2-1"
>
  <FormInput
    disabled={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="arrow-0-2-2 arrow_disabled-0-2-3"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;

exports[`<BaseSelect /> renders invalid 1`] = `
<div
  className="select-0-2-1"
>
  <FormInput
    invalid={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="arrow-0-2-2 arrow_invalid-0-2-4"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;
